config-consulta-saldo/deployment-consulta-saldo.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: consulta-saldo
  name: consulta-saldo
spec:
  replicas: 1
  selector:
    app: consulta-saldo
    deploymentconfig: consulta-saldo
  template:
    metadata:
      labels:
        app: consulta-saldo
        deploymentconfig: consulta-saldo
    spec:
      containers:
        - name: consulta-saldo
          image: quay.io/lcoronad/consulta-saldo:1.0
          readinessProbe:
            httpGet:
              path: /health-check
              port: 8080
              scheme: HTTP
            failureThreshold: 3
            initialDelaySeconds: 20
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 120
          livenessProbe:
            httpGet:
              path: /health-check
              port: 8080
              scheme: HTTP
            failureThreshold: 2
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 120
          resources:
            limits:
              cpu: 400m
              memory: 1024Mi
            requests:
              cpu: 200m
              memory: 640Mi
