config-consulta-saldo/service-consulta-saldo.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: consulta-saldo
  name: consulta-saldo
  namespace: redhat-integration
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: consulta-saldo
