config-consulta-saldo/route-consulta-saldo.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: consulta-saldo
  name: consulta-saldo
  namespace: redhat-integration
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: consulta-saldo
    weight: 100
